# env-mon-pms5003

./: Cargo.toml  README.md  build.rs  upload.sh
.cargo/: config.toml
src/: air_quality.rs  bme280.rs  display.rs  logger.rs  main.rs  pm_rolling.rs  pms5003.rs  scd41.rs
src/display/: gauge.rs  layout.rs  text.rs
