[package]
name = "env-mon-pms5003"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bme280 = "0.5"
embedded-graphics = "0.8"
embedded-hal = "1.0"
embedded-hal-bus = "0.3"
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c3"] }
esp-hal = { version = "1.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.16", features = ["esp32c3"] }
log = "0.4"
heapless = "0.8"
mipidsi = "0.10"
micromath = "2.1"
panic-halt = "1.0"
u8g2-fonts = "0.6.0"

[[bin]]
name = "env-mon-pms5003"
path = "src/main.rs"
test = false
bench = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = 1
